# FreshmanRAG_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.debug.yml  docker-compose.release.yml  docker-compose.yml  example.env  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
bot/: app.py  custom_filters.py  db.py  decorators.py  management_handlers.py  rag_handlers.py  utils.py
bot/handlers/: management.py  rag.py  service.py
configs/: default.yaml
configs/knoweledge/loader/: raw_html.yaml  webloader.yaml
configs/knoweledge/transform/: none.yaml  (+2 more)
configs/llm/: chatgpt-3.5-turbo-instruct.yaml  chatgpt-4o-mini.yaml  gemma2_2b_it.yaml
configs/pipeline/: rag_with_docs_filteing.yaml  rag_with_question_rewriting.yaml  simple_rag.yaml
configs/prompts/: chatgpt-3.5-turbo-instruct.yaml  chatgpt-4o-mini.yaml  gemma2.yaml
configs/retriever/: elasticsearch_bm25.yaml  ensemble_parent_pg_bm25.yaml  parent_pg.yaml  pgvector.yaml
crag/: graphs.py  llms.py  prompts.py  retrievers.py
crag/knoweledge/: dnvr_guides.txt  load_telegraph_guides.py
crag/pipelines/: __init__.py  base.py  rag_with_docs_filtering.py  rag_with_question_rewriting.py  simple_rag.py
crag/prompt_templates/: gemma2_docs_filtering.txt  gemma2_question_rewriting.txt  gemma2_rag.txt
crag/retrievers/: __init__.py  base.py  ensemble.py  parent_document_retriever.py  vector_store.py
crag/storage/: __init__.py  pgsql_doc_store.py
init_scripts/: entry.sh  init_bot_db.py  load_gemma2_2b_it.sh  load_sbert.py  prepare_data_volumes.sh
(+8 files in other folders)
