[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "FreshmanRAG_bot"
version = "2024.0.1"
authors = [
    {name = "Oleh Shkalikov", email = "Shkalikov.Oleh@gmail.com"},
]
description = "Ukrainian Telegram bot powered by Conditional RAG for first-year student"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"crag.prompt_templates" = ["*.txt"]

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[project.urls]
Repository = "https://github.com/ShkalikovOleh/FreshmanRAG_bot"

[tool.isort]
profile = "black"